--- a/Automate Referral-checkpoint.ipynb
+++ b/Automate Referral-checkpoint.ipynb
@@ -3,52 +3,51 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cbe5ad00",
+   "source": [
+    "from selenium import webdriver\r\n",
+    "from selenium.webdriver.common.keys import Keys\r\n",
+    "from selenium.webdriver.support import ui\r\n",
+    "from selenium.webdriver.common.by import By\r\n",
+    "from selenium.webdriver.support import expected_conditions as EC\r\n",
+    "from selenium.webdriver import ActionChains\r\n",
+    "from selenium.webdriver.support.ui import WebDriverWait\r\n",
+    "from selenium.common.exceptions import TimeoutException\r\n",
+    "from selenium.common.exceptions import NoAlertPresentException\r\n",
+    "from selenium.common.exceptions import NoSuchElementException\r\n",
+    "import time\r\n",
+    "import win32clipboard\r\n",
+    "import random\r\n",
+    "import string\r\n",
+    "\r\n",
+    "for i in range(1):\r\n",
+    "    driver = webdriver.Firefox()\r\n",
+    "    driver.get('https://temp-mail.org/')\r\n",
+    "    WebDriverWait(driver,20).until(EC.element_to_be_clickable((By.XPATH, \"//button[@class='btn-rds icon-btn bg-theme click-to-copy copyIconGreenBtn']\"))).click()\r\n",
+    "    win32clipboard.OpenClipboard()\r\n",
+    "    data = win32clipboard.GetClipboardData()\r\n",
+    "    win32clipboard.CloseClipboard()\r\n",
+    "    print(data)\r\n",
+    "    time.sleep(3)\r\n",
+    "    driver.switch_to_window \r\n",
+    "    driver.get('https://www.nikonschool.in/refera_friend')\r\n",
+    "    WebDriverWait(driver,20).until(EC.element_to_be_clickable((By.XPATH,'//*[@id=\"ContentPlaceHolder1_txtBoxUsrname\"]'))).send_keys('abc@gmail.com')\r\n",
+    "    WebDriverWait(driver,20).until(EC.element_to_be_clickable((By.XPATH,'//*[@id=\"ContentPlaceHolder1_txtBoxPass\"]'))).send_keys('123')\r\n",
+    "    WebDriverWait(driver,20).until(EC.element_to_be_clickable((By.XPATH,'//*[@id=\"ContentPlaceHolder1_btnsignin\"]'))).click()\r\n",
+    "    time.sleep(3)\r\n",
+    "    WebDriverWait(driver,20).until(EC.element_to_be_clickable((By.XPATH,'//*[@id=\"page\"]/section/nav/ul/li[9]/a'))).click()\r\n",
+    "    WebDriverWait(driver,20).until(EC.element_to_be_clickable((By.XPATH,'//*[@id=\"page\"]/section/nav/ul/li[9]/ul/li[5]/a'))).click()\r\n",
+    "    WebDriverWait(driver,20).until(EC.element_to_be_clickable((By.XPATH,'//*[@id=\"ContentPlaceHolder1_tags_1_tag\"]'))).send_keys(data)\r\n",
+    "    WebDriverWait(driver,20).until(EC.element_to_be_clickable((By.XPATH,'//*[@id=\"ContentPlaceHolder1_SendInvite\"]'))).click()\r\n",
+    "    time.sleep(3)\r\n",
+    "    driver.back()\r\n",
+    "    driver.back()\r\n",
+    "    driver.back()\r\n",
+    "    driver.back()"
+   ],
+   "outputs": [],
    "metadata": {
     "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "from selenium import webdriver\n",
-    "from selenium.webdriver.common.keys import Keys\n",
-    "from selenium.webdriver.support import ui\n",
-    "from selenium.webdriver.common.by import By\n",
-    "from selenium.webdriver.support import expected_conditions as EC\n",
-    "from selenium.webdriver import ActionChains\n",
-    "from selenium.webdriver.support.ui import WebDriverWait\n",
-    "from selenium.common.exceptions import TimeoutException\n",
-    "from selenium.common.exceptions import NoAlertPresentException\n",
-    "from selenium.common.exceptions import NoSuchElementException\n",
-    "import time\n",
-    "import win32clipboard\n",
-    "import random\n",
-    "import string\n",
-    "\n",
-    "for i in range(1):\n",
-    "    driver = webdriver.Firefox()\n",
-    "    driver.get('https://temp-mail.org/')\n",
-    "    WebDriverWait(driver,20).until(EC.element_to_be_clickable((By.XPATH, \"//button[@class='btn-rds icon-btn bg-theme click-to-copy copyIconGreenBtn']\"))).click()\n",
-    "    win32clipboard.OpenClipboard()\n",
-    "    data = win32clipboard.GetClipboardData()\n",
-    "    win32clipboard.CloseClipboard()\n",
-    "    print(data)\n",
-    "    time.sleep(3)\n",
-    "    driver.switch_to_window \n",
-    "    driver.get('https://www.nikonschool.in/refera_friend')\n",
-    "    WebDriverWait(driver,20).until(EC.element_to_be_clickable((By.XPATH,'//*[@id=\"ContentPlaceHolder1_txtBoxUsrname\"]'))).send_keys('dhruvpandey928@gmail.com')\n",
-    "    WebDriverWait(driver,20).until(EC.element_to_be_clickable((By.XPATH,'//*[@id=\"ContentPlaceHolder1_txtBoxPass\"]'))).send_keys('vk196108')\n",
-    "    WebDriverWait(driver,20).until(EC.element_to_be_clickable((By.XPATH,'//*[@id=\"ContentPlaceHolder1_btnsignin\"]'))).click()\n",
-    "    time.sleep(3)\n",
-    "    WebDriverWait(driver,20).until(EC.element_to_be_clickable((By.XPATH,'//*[@id=\"page\"]/section/nav/ul/li[9]/a'))).click()\n",
-    "    WebDriverWait(driver,20).until(EC.element_to_be_clickable((By.XPATH,'//*[@id=\"page\"]/section/nav/ul/li[9]/ul/li[5]/a'))).click()\n",
-    "    WebDriverWait(driver,20).until(EC.element_to_be_clickable((By.XPATH,'//*[@id=\"ContentPlaceHolder1_tags_1_tag\"]'))).send_keys(data)\n",
-    "    WebDriverWait(driver,20).until(EC.element_to_be_clickable((By.XPATH,'//*[@id=\"ContentPlaceHolder1_SendInvite\"]'))).click()\n",
-    "    time.sleep(3)\n",
-    "    driver.back()\n",
-    "    driver.back()\n",
-    "    driver.back()\n",
-    "    driver.back()"
-   ]
+   }
   }
  ],
  "metadata": {
